--- a/package.json
+++ b/package.json
@@ -3,18 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/chaos-proxy.umd.js",
-  "module": "./dist/chaos-proxy.es.js",
-  "types": "./dist/chaos-proxy.d.ts",
-  "bin": {
-    "chaos-proxy": "./bin/runner.js"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/chaos-proxy.es.js",
-      "require": "./dist/chaos-proxy.umd.js"
-    }
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -32,8 +20,6 @@
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4",
-    "vite-plugin-css-injected-by-js": "^3.3.0",
-    "vite-plugin-dts": "^3.0.0"
+    "vite": "^7.2.4"
   }
 }
